    * 4074 FIX: check_ftp: Fixed possible wrong service description caused by unintended use of global variable
    * 3943 FIX: ntp.time: fixed parameters in discovered checks...

    Multisite:
    * 4072 FIX: Fixed multiple issues in BI availability when groups or names contain umlauts

    WATO:
    * 4077 FIX: Fixed "Request URI too long" when cloning role after editing another one

    Event Console:
    * 4097 FIX: Event console: Make writing of status file more robust...


1.2.8p14:
    Checks & Agents:
    * 3961 FIX: fixed error sections handling if parse function is available
    * 3962 FIX: oracle_sessions: fixed empty section handling
    * 3831 FIX: ucd_cpu_util: no longer reports an UNKNOWN error when the counter data wasn't updated...
    * 3985 FIX: mrpe: fixed broken long output when using the CMC...
    * 4035 FIX: df_zos: Fixed ignoring last filesystem after new discovery...
    * 3741 FIX: omd_status: Fix labelling and structure of several metric graphs
    * 3986 FIX: esx_vsphere_counters.uptime: fixed incorrect alert when receiving corrupted counter data...
    * 3952 FIX: diskstat: fixed bug if multipath devices having an alias...
    * 3939 FIX: f5_bigip_conns: readded performance data and graphs...
    * 3979 FIX: vbox_guest: Only try to fetch VBox state in case the vboxguest module is loaded
    * 3750 FIX: cmc_temp: Check now also works when using Nagios core
    * 4086 FIX: websphere_mq_queues: fixed unknown variable
    * 3940 FIX: aix_hacmp_services: fixed broken check in case of agent section showing extra information before the "Status(...)" line...
    * 3941 FIX: zypper: fixed broken check for sections since agent OS SLES12...
    * 4043 FIX: Add missing metric definition for 15 minute CPU load prediction'
    * 4088 FIX: ntp: fixed incomplete data handling
    * 4091 FIX: oracle_tablespace: Werk 3907 broke the detection of UNDO- and TEMP-Tablespaces

    Multisite:
    * 3970 SEC: Fixed possible URL injection on index page...