@@ -1,0 +1,9 @@
+Title: Improved error handling in case a WATO folder can not be written
+Level: 1
+Component: wato
+Compatible: compat
+Version: 1.2.8p15
+Date: 1480583719
+Class: fix
+
+
